--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -14,10 +14,10 @@ copy_on_select yes
 
 #----background----
 background_opacity 0.60
-background #282828
 
 #----hot-keys----
-map ctrl+tab next_tab
+map ctrl+n next_tab
+map ctrl+p prev_tab
 
 #----other----
 mouse_hide_wait 2.0
@@ -26,5 +26,4 @@ tab_bar_edge top
 scrollback_lines 2000
 scrollback_pager_history_size 0
 
-#---shell_integration---
-
+include ./Gruvbox Dark.conf
