--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -1,19 +1,14 @@
 #----fonts----
-# font_family     Source Code Pro
-font_family     Fira Code
+font_family Jetbrains Mono
 font_size 10.0
 
 #----cursor----
-# shell_integration 
 shell_integration no-cursor no-sudo
 cursor_shape underline
 cursor_blink_interval 0
 copy_on_select yes
 # cursor_text_color #ebdbb2
 # cursor #ebdbb2
-
-#----background----
-background_opacity 0.60
 
 #----other----
 mouse_hide_wait 2.0
@@ -23,3 +18,8 @@ scrollback_lines 2000
 scrollback_pager_history_size 0
 
 include ./Gruvbox Dark.conf
+
+#----background----
+background_opacity 0.80
+background #1d2021
+
