--- a/fuzzel/fuzzel.ini
+++ b/fuzzel/fuzzel.ini
@@ -1,27 +1,23 @@
-font=hack Mono:size=10
-dpi-aware=no
-#prompt="> "
+[main]
+font=Jetbrains Mono:size=10
+prompt="=> "
+icons-enabled=no
 terminal=kitty
-#launch-prefix=swaymsg exec --
-#
-#lines=20
-#width=60
-#horizontal-pad=8
-#vertical-pad=4
-#inner-pad=4
-
-exit-on-keyboard-focus-loss=no
+lines=15
+width=44
+horizontal-pad=10
+vertical-pad=6
 
 [colors]
-background=282828e0
+background=1d202170
 text=ebdbb2ff
-match=98971aff
+match=fabd2fff
 selection=8ec07cff
 selection-text=282828ff
 border=ebdbb2ff
 
 [border]
-width=3
+width=1
 radius=5
 
 
