Font size and bg opacity changes

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -1,6 +1,6 @@
 #----fonts----
 font_family Jetbrains Mono
-font_size 10.0
+font_size 11.0
 
 #----cursor----
 shell_integration no-cursor no-sudo
@@ -20,6 +20,5 @@ scrollback_pager_history_size 0
 include ./Gruvbox Dark.conf
 
 #----background----
-background_opacity 0.80
-background #1d2021
+# background_opacity 0.0
 
