--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -6,7 +6,7 @@ font_size 11.0
 shell_integration no-cursor no-sudo
 cursor_shape underline
 cursor_blink_interval 0
-copy_on_select yes
+copy_on_select no
 # cursor_text_color #ebdbb2
 # cursor #ebdbb2
 
