--- a/waybar/config
+++ b/waybar/config
@@ -1,3 +1,4 @@
+// filetype jsonc
 {
 	"layer": "top",
 	"position": "top",
@@ -5,11 +6,11 @@
 	"modules-left": [
 		"sway/mode",
 		"sway/workspaces",
-		// "custom/arrow10",
 		"sway/window"
 	],
 
 	"modules-right": [
+		"tray",
 		"custom/arrow9",
 		"pulseaudio",
 		"custom/arrow8",
@@ -18,41 +19,51 @@
 		"memory",
 		"custom/arrow6",
 		"cpu",
-		//"custom/arrow5",
-		//"temperature",
-		//"custom/arrow4",
-		//"battery",
 		"custom/arrow3",
 		"sway/language",
 		"custom/arrow2",
-		"tray",
 		"clock#date",
 		"custom/arrow1",
-		"clock#time"
+		"clock#time",
+		"custom/arrow0",
+		"group/group-power"
 	],
 
 	// Modules
 
-	"battery": {
-		"interval": 10,
-		"states": {
-			"warning": 30,
-			"critical": 15
-		},
-		"format-time": "{H}:{M:02}",
-		"format": "{icon} {capacity}% ({time})",
-		"format-charging": " {capacity}% ({time})",
-		"format-charging-full": " {capacity}%",
-		"format-full": "{icon} {capacity}%",
-		"format-alt": "{icon} {power}W",
-		"format-icons": [
-			"",
-			"",
-			"",
-			"",
-			""
-		],
-		"tooltip": false
+	"group/group-power": {
+    "orientation": "inherit",
+    "drawer": {
+        "transition-duration": 400,
+        "children-class": "not-power",
+        "transition-left-to-right": true
+    },
+    "modules": [
+        "custom/power", // First element is the "group leader" and won't ever be hidden
+		"custom/logout",
+        "custom/sleep",
+        "custom/reboot"
+    ]
+	},
+	"custom/sleep": {
+		"format": "",
+		"tooltip": false,
+		"on-click": "swaylock -elf -c 000000 && systemctl suspend"
+	},
+	"custom/reboot": {
+		"format": "",
+		"tooltip": false,
+		"on-click": "reboot"
+	},
+	"custom/power": {
+		"format": "",
+		"tooltip": false,
+		"on-click": "shutdown now"
+	},
+	"custom/logout": {
+		"format": "",
+		"tooltip": false,
+		"on-click": "swaymsg exit"
 	},
 
 	"clock#time": {
@@ -141,23 +152,14 @@
 		"tooltip": false
 	},
 
-	"temperature": {
-		"critical-threshold": 90,
-		"interval": 5,
-		"format": "{icon} {temperatureC}°",
-		"format-icons": [
-			"",
-			"",
-			"",
-			"",
-			""
-		],
-		"tooltip": false
-	},
-
 	"tray": {
 		"icon-size": 18
 		//"spacing": 10
+	},
+
+	"custom/arrow0": {
+		"format": "",
+		"tooltip": false
 	},
 
 	"custom/arrow1": {
