--- a/sway/config
+++ b/sway/config
@@ -245,10 +245,11 @@ bindsym $mod+F6 output "HDMI-A-1" toggle ; output "eDP-1" toggleN
 #
 mode "resize" {
 
-	bindsym --to-code $left resize shrink width 10px
-	bindsym --to-code $down resize grow height 10px
-	bindsym --to-code $up resize shrink height 10px
+	bindsym --to-code $left  resize shrink width 10px
 	bindsym --to-code $right resize grow width 10px
+
+	bindsym --to-code $up	 resize grow height 10px
+	bindsym --to-code $down	 resize shrink height 10px
 
 	# Return to default mode
 	bindsym Return mode "default"
