--- a/sway/config
+++ b/sway/config
@@ -30,7 +30,6 @@ set {
 	$braqua		#8ec07c
 	$white		#ebdbb2
 
-	$a		e0
 	$focused	$braqua
 	$inactive	$purple
 	$unfocused	$black
@@ -107,7 +106,7 @@ output HDMI-A-1 mode 1920x1080@74.973000Hz
 	bindsym --to-code $mod+i exec ~/.userscripts/vim-anywhere
 
 	# Toggle this script https://gist.github.com/jacksonn97/1e759b8d197dac21c6a2624e9db2847e
-	bindsym --to-code $mod+Shift+e exec COLUMNS=20 LINES=15 kitty -e ~/.userscripts/powermanager
+	bindsym --to-code $mod+Shift+e exec kitty -e ~/.userscripts/powermanager
 
 	# Resize them with right mouse button + $mod.
 	# Despite the name, also works for non-floating windows.
@@ -135,8 +134,12 @@ bindsym --to-code $mod+Alt+l exec swaylock -elf -c 000000
 
 	for_window [title="LibreWolf - Choose User Profile"] floating enable
 
+	# powermananager
 	for_window [title="powermanager"] floating enable
 	for_window [title="powermanager"] border pixel 2
+	for_window [title="powermanager"] resize set 360 210
+	for_window [title="powermanager"] move position 1548 4
+	for_window [title="powermanager"] focus
 
 
 # Window default place
