--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -17,7 +17,7 @@ tab_bar_edge top
 scrollback_lines 2000
 scrollback_pager_history_size 0
 
-include ./Gruvbox Dark Hard.conf
+include ./Everforest Dark Medium.conf
 
 #----background----
 # background_opacity 0.0
