--- a/sway/config
+++ b/sway/config
@@ -7,28 +7,22 @@
 # Sway theme
 
 # smart_borders on
-default_border pixel 0
+default_border pixel 1
 # smart_gaps on
 gaps inner 4
 
 # Colors (gruvbox theme)
 set {
-	$black		#282828
-	$red		#cc241d
-	$green		#98971a
-	$yellow		#d79921
-	$blue		#458588
-	$purple		#b16286
+	$black		#2d353b
+	$red		#e67e80
+	$green		#a7c080
+	$yellow		#dbbc7f
+	$blue		#7fbbb3
+	$purple		#d699b6
 	$aqua		#689d6a
 	$gray		#a89984
-	$brgray		#928374
-	$brred		#fb4934
-	$brgreen	#b8bb26
-	$bryellow	#fabd2f
-	$brblue		#83a598
-	$brpurple	#d3869b
-	$braqua		#8ec07c
-	$white		#ebdbb2
+	$braqua		#83c092
+	$white		#9da9a0
 
 	$focused	$braqua
 	$inactive	$purple
@@ -59,7 +53,7 @@ input * {
 	xkb_options "grp:alt_shift_toggle, caps:super"
 	xkb_numlock enable
 	accel_profile flat
-	pointer_accel 0
+	pointer_accel -0.6
 }
 
 ### Settings for keyboard-mouse emulation
@@ -277,7 +271,7 @@ exec {
 	gsettings set org.gnome.desktop.interface icon-theme "Qogir"
 	mako --default-timeout 8000
 	python3 ~/Documents/searx/searx/webapp.py
-	python3 ~/.usersrcipts/noisy/noisy.py --config ~/.autorun/noisy/config.json
+	python3 ~/.userscripts/noisy/noisy.py --config ~/.userscripts/noisy/config.json
 }
 
 include /etc/sway/config.d/*
