--- a/waybar/config
+++ b/waybar/config
@@ -75,8 +75,8 @@
 	"clock#date": {
 		"interval": 20,
 		"format": "{:%e %b %Y}",
-		"tooltip": false
-		//"tooltip-format": "{:%e %B %Y}"
+		"tooltip": true,
+		"tooltip-format": "{:%A}"
 	},
 
 	"cpu": {
