Applying Everforest for fuzzel
Also added new hotkeys

--- a/fuzzel/fuzzel.ini
+++ b/fuzzel/fuzzel.ini
@@ -9,18 +9,21 @@ horizontal-pad=10
 vertical-pad=6
 
 [colors]
-background=1d202170
-text=ebdbb2ff
-match=fabd2fff
-selection=8ec07cff
-selection-text=282828ff
-border=ebdbb2ff
+background=     2d353b70
+text=           d3c6aaff
+match=          dbbc7fff
+selection=      a7c080ff
+selection-text= 2d353bff
+border=         d3c6aaff
 
 [border]
 width=1
-radius=5
+; radius=5
+radius=0
 
 
 [key-bindings]
 next=Mod1+j Down Control+n
 prev=Mod1+k Up Control+p
+delete-prev-word=Control+w
+delete-line-backward=Control+u
