--- a/sway/config
+++ b/sway/config
@@ -53,7 +53,7 @@ input * {
 	xkb_options "grp:alt_shift_toggle, caps:super"
 	xkb_numlock enable
 	accel_profile flat
-	pointer_accel -0.6
+	pointer_accel -0.15
 }
 
 ### Settings for keyboard-mouse emulation
@@ -93,19 +93,16 @@ output HDMI-A-1 mode 1920x1080@74.973000Hz
 
 # Start your launcher
 	bindsym --to-code $mod+d exec $menu
-	bindsym --to-code Print exec grim ~/Images/screenshots/screenshot-"$(date +%T)"-"$(date +%d)".jpg
 
-	# vim-anywhere for sway
+	# https://gist.github.com/jacksonn97/007412a509e9864d106206819e844d14
+	bindsym --to-code Print exec .userscripts/screenshot
+
 	# https://gist.github.com/jacksonn97/2acd8c9dbfde204df9ba477122f371b4
 	bindsym --to-code $mod+i exec ~/.userscripts/vim-anywhere
 
-	# Toggle this script https://gist.github.com/jacksonn97/1e759b8d197dac21c6a2624e9db2847e
+	# https://gist.github.com/jacksonn97/1e759b8d197dac21c6a2624e9db2847e
 	bindsym --to-code $mod+Shift+e exec kitty -e ~/.userscripts/powermanager
 
-	# Resize them with right mouse button + $mod.
-	# Despite the name, also works for non-floating windows.
-	# Change normal to inverse to use left mouse button for resizing and right
-	# mouse button for dragging.
 	floating_modifier $mod normal
 
 	# Reload the configuration file
