Update confit for a new version

--- a/fuzzel/fuzzel.ini
+++ b/fuzzel/fuzzel.ini
@@ -1,5 +1,6 @@
 [main]
-font=Jetbrains Mono:size=10
+font=Jetbrains Mono:size=10:witght=bold
+use-bold = yes
 prompt="=> "
 icons-enabled=no
 terminal=kitty
@@ -7,10 +8,14 @@ lines=15
 width=44
 horizontal-pad=10
 vertical-pad=6
+match-counter = yes
 
 [colors]
 background=     2d353b70
 text=           d3c6aaff
+input=          d3c6aaff
+prompt=         d3c6aaff
+counter=        d3c6aaff
 match=          dbbc7fff
 selection=      a7c080ff
 selection-text= 2d353bff
