--- a/waybar/config
+++ b/waybar/config
@@ -75,19 +75,17 @@
 
 	"clock#date": {
 		"interval": 20,
-		"format": "{:%e %b %Y}",
+		"format": "{:%a %e %b %Y}",
 		"tooltip": true,
 		"tooltip-format": "{:%A}"
 	},
 
 	"cpu": {
-		"interval": 2,
+		"interval": 1,
 		"tooltip": false,
 		"min-length": 6,
 		"format": " {usage}%",
-		"format-alt": " {load}",
 		"states": {
-			"warning": 70,
 			"critical": 90
 		}
 	},
@@ -100,21 +98,21 @@
 	},
 
 	"memory": {
-		"interval": 2,
+		"interval": 1,
 		"format": " {used:0.1f}G/{total:0.1f}G",
 		"states": {
-			"warning": 70,
 			"critical": 90
 		},
 		"tooltip": false
 	},
 
 	"network": {
-		"interval": 5,
+		"interval": 2,
 		"format-wifi": " {essid} ({signalStrength}%)",
 		"format-ethernet": " {ifname}",
 		"format-disconnected": "No connection",
 		"format-alt": " {ipaddr}/{cidr}",
+		"format-alt-disconnected": "No connection",
 		"tooltip": false
 	},
 
@@ -125,7 +123,7 @@
 
 	"sway/window": {
 		"format": "{}",
-		"max-length": 30,
+		"max-length": 200,
 		"tooltip": false
 	},
 
@@ -138,7 +136,7 @@
 	"pulseaudio": {
 		"format": "{icon} {volume}%",
 		"format-bluetooth": "{icon} {volume}%",
-		"format-muted": "",
+		"format-muted": "",
 		"format-icons": {
 			"headphone": "",
 			"hands-free": "",
