--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -7,15 +7,14 @@ shell_integration no-cursor no-sudo
 cursor_shape underline
 cursor_blink_interval 0
 copy_on_select no
-# cursor_text_color #ebdbb2
-# cursor #ebdbb2
 
 #----other----
-mouse_hide_wait 2.0
+mouse_hide_wait 1.0
 enable_audio_bell no
 tab_bar_edge top
 scrollback_lines 2000
 scrollback_pager_history_size 0
+scrollback_fill_enlarged_window yes
 
 include ./Everforest Dark Medium.conf
 
