--- a/fuzzel/fuzzel.ini
+++ b/fuzzel/fuzzel.ini
@@ -1,5 +1,5 @@
 [main]
-font=Jetbrains Mono:size=10:witght=bold
+font=Jetbrains Mono:size=10
 use-bold = yes
 prompt="=> "
 icons-enabled=no
@@ -23,7 +23,6 @@ border=         d3c6aaff
 
 [border]
 width=1
-; radius=5
 radius=0
 
 
