--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -1,12 +1,16 @@
 #----fonts----
 font_family Jetbrains Mono
 font_size 11.0
+bold_font        auto
+italic_font      auto
+bold_italic_font auto
 
 #----cursor----
 shell_integration no-cursor no-sudo
 cursor_shape underline
 cursor_blink_interval 0
 copy_on_select no
+
 
 #----other----
 mouse_hide_wait 1.0
