--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -1,6 +1,7 @@
 #----fonts----
-font_family Jetbrains Mono
-font_size 11.0
+font_family Iosevka Term Slab
+font_size 12.0
+text_composition_strategy 1.4 70
 bold_font        auto
 italic_font      auto
 bold_italic_font auto
@@ -23,7 +24,7 @@ scrollback_fill_enlarged_window yes
 include ./Everforest Dark Medium.conf
 
 #----background----
-# background_opacity 0.0
+background_opacity 0.6
 
 map ctrl+shift+w no_op
 map ctrl+shift+t no_op
