--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -12,6 +12,7 @@ cursor_shape underline
 cursor_blink_interval 0
 copy_on_select no
 
+
 #----other----
 mouse_hide_wait 1.0
 enable_audio_bell no
@@ -23,7 +24,7 @@ scrollback_fill_enlarged_window yes
 include ./Everforest Dark Medium.conf
 
 #----background----
-# background_opacity 0.0
+background_opacity 0.6
 
 map ctrl+shift+w no_op
 map ctrl+shift+t no_op
