Apply new font for fuzzel

--- a/fuzzel/fuzzel.ini
+++ b/fuzzel/fuzzel.ini
@@ -1,9 +1,8 @@
 [main]
-font=Jetbrains Mono:size=10
-use-bold = yes
+font=Iosevka Slab Extended:size=10:weight=200
 prompt="=> "
 icons-enabled=no
-terminal=kitty
+terminal=kitty --detach=yes {cmd}
 lines=15
 width=44
 horizontal-pad=10
